/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation("com.google.guava:guava:32.1.1-jre")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

application {
    // Define the main class for the application.
    mainClass.set("engine.App")
}

tasks.withType<Jar> {
    manifest {
        attributes["Main-Class"] = "engine.App"
    }
}

tasks {
    val jar = register<Jar>("fatJar") {
        // Dependencies
        dependsOn.addAll(listOf("compileJava", "processResources"))

        // Create the manifest
        manifest { attributes(mapOf("Main-Class" to application.mainClass)) }

        // ???
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE

        // Get sourceSets
        val sourcesMain = sourceSets.main.get()
        val contents = configurations.runtimeClasspath.get()
            .map { if (it.isDirectory) it else zipTree(it) } + sourcesMain.output
        
        // Name the Jar
        archiveClassifier.set("standalone-runtime")
        
        from(contents)
    }
    build {
        // Trigger
        dependsOn(jar)
    }
}
